// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`MedicalPrescriptionAttachments component when an attachment is present and has mimeType=image/svg+xml should render the SVG 1`] = `
<View>
  <View
    style={
      Object {
        "paddingHorizontal": 24,
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": -4,
        }
      }
    >
      <Text
        color="bluegrey"
        defaultColor="bluegrey"
        defaultWeight="Regular"
        font="TitilliumWeb"
        fontStyle={
          Object {
            "fontSize": 16,
            "lineHeight": 24,
          }
        }
        style={
          Array [
            Object {
              "fontSize": 16,
              "lineHeight": 24,
            },
            Object {
              "color": "#475A6D",
              "fontFamily": "Titillium Web",
              "fontStyle": "normal",
              "fontWeight": "600",
            },
          ]
        }
        weight="SemiBold"
      >
        NATIONAL HEALTH SERVICE
      </Text>
    </View>
    <Text
      color="bluegrey"
      defaultColor="bluegrey"
      defaultWeight="Regular"
      font="TitilliumWeb"
      fontStyle={
        Object {
          "fontSize": 16,
          "lineHeight": 24,
        }
      }
      style={
        Array [
          Object {
            "fontSize": 16,
            "lineHeight": 24,
          },
          Object {
            "color": "#475A6D",
            "fontFamily": "Titillium Web",
            "fontStyle": "normal",
            "fontWeight": "400",
          },
        ]
      }
      weight="Regular"
    >
      WHO
    </Text>
    <View
      style={
        Object {
          "height": 4,
        }
      }
    />
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#CCD4DC",
          },
          false,
          Object {
            "height": 2,
          },
        ]
      }
    />
  </View>
  <View>
    <View
      style={
        Object {
          "paddingHorizontal": 24,
        }
      }
    >
      <View
        style={
          Object {
            "height": 8,
          }
        }
      />
      <Text
        color="bluegrey"
        defaultColor="bluegrey"
        defaultWeight="Regular"
        font="TitilliumWeb"
        fontStyle={
          Object {
            "fontSize": 16,
            "lineHeight": 24,
          }
        }
        style={
          Array [
            Object {
              "fontSize": 16,
              "lineHeight": 24,
            },
            Object {
              "color": "#475A6D",
              "fontFamily": "Titillium Web",
              "fontStyle": "normal",
              "fontWeight": "400",
            },
          ]
        }
        weight="Regular"
      >
        BARCODES
      </Text>
      <RNSVGSvgView
        align="xMidYMid"
        bbHeight={52}
        bbWidth="100%"
        enableBackground="new 0 0 1000 1000"
        focusable={false}
        height={52}
        meetOrSlice={0}
        minX={0}
        minY={0}
        style={
          Array [
            Object {
              "backgroundColor": "transparent",
              "borderWidth": 0,
            },
            Object {
              "flex": 0,
              "height": 52,
              "width": "100%",
            },
          ]
        }
        vbHeight={1000}
        vbWidth={1000}
        version={1.1}
        width="100%"
        x="0px"
        xml="<?xml version=\\"1.0\\" encoding=\\"utf-8\\"?>
<!-- Svg Vector Icons : http://www.onlinewebfonts.com/icon -->
<!DOCTYPE svg PUBLIC \\"-//W3C//DTD SVG 1.1//EN\\" \\"http://www.w3.org/Graphics/SVG/1.1/DTD/svg11.dtd\\">
<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" xmlns:xlink=\\"http://www.w3.org/1999/xlink\\" x=\\"0px\\" y=\\"0px\\" viewBox=\\"0 0 1000 1000\\" enable-background=\\"new 0 0 1000 1000\\" xml:space=\\"preserve\\">
<metadata> Svg Vector Icons : http://www.onlinewebfonts.com/icon </metadata>
<g><path d=\\"M973.7,263.2C941,165.2,834.8,91.7,720.5,91.7c-89.8,0-171.5,49-220.5,122.5C451,140.7,369.3,91.7,279.5,91.7c-114.3,0-212.3,73.5-245,171.5C10,304,10,344.8,10,402c16.3,163.3,171.5,343,465.5,498.2c8.2,0,16.3,8.2,24.5,8.2s8.2,0,16.3,0C532.7,900.2,965.5,687.8,990,402C990,344.8,990,304,973.7,263.2\\"/></g>
</svg>"
        xmlSpace="preserve"
        xmlns="http://www.w3.org/2000/svg"
        xmlnsXlink="http://www.w3.org/1999/xlink"
        y="0px"
      >
        <RNSVGGroup>
          <RNSVGGroup>
            <RNSVGPath
              d="M973.7,263.2C941,165.2,834.8,91.7,720.5,91.7c-89.8,0-171.5,49-220.5,122.5C451,140.7,369.3,91.7,279.5,91.7c-114.3,0-212.3,73.5-245,171.5C10,304,10,344.8,10,402c16.3,163.3,171.5,343,465.5,498.2c8.2,0,16.3,8.2,24.5,8.2s8.2,0,16.3,0C532.7,900.2,965.5,687.8,990,402C990,344.8,990,304,973.7,263.2"
            />
          </RNSVGGroup>
        </RNSVGGroup>
      </RNSVGSvgView>
      <View
        style={
          Object {
            "height": 16,
          }
        }
      />
    </View>
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#CCD4DC",
          },
          Object {
            "marginLeft": 24,
            "marginRight": 24,
          },
          Object {
            "height": 0.5,
          },
        ]
      }
    />
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#CCD4DC",
        },
        Object {
          "marginLeft": 24,
          "marginRight": 24,
        },
        Object {
          "height": 0.5,
        },
      ]
    }
  />
  <View
    style={
      Object {
        "height": 16,
      }
    }
  />
  <View
    style={
      Object {
        "paddingHorizontal": 24,
      }
    }
  >
    <View
      style={
        Object {
          "height": 4,
        }
      }
    />
    <Text
      color="bluegrey"
      defaultColor="bluegrey"
      defaultWeight="Regular"
      font="TitilliumWeb"
      fontStyle={
        Object {
          "fontSize": 16,
          "lineHeight": 24,
        }
      }
      style={
        Array [
          Object {
            "fontSize": 16,
            "lineHeight": 24,
          },
          Object {
            "color": "#475A6D",
            "fontFamily": "Titillium Web",
            "fontStyle": "normal",
            "fontWeight": "400",
          },
        ]
      }
      weight="Regular"
    >
      Rilasciato ai sensi dell'art.11, comma 16 del DL 31 mag 2010, n.78 e dell’art.1, comma 4 del DM 2 nov 2011
    </Text>
  </View>
</View>
`;

exports[`MedicalPrescriptionAttachments component when an attachment is present and prescriptionData is present should render it 1`] = `
<View>
  <View
    style={
      Object {
        "paddingHorizontal": 24,
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": -4,
        }
      }
    >
      <Text
        color="bluegrey"
        defaultColor="bluegrey"
        defaultWeight="Regular"
        font="TitilliumWeb"
        fontStyle={
          Object {
            "fontSize": 16,
            "lineHeight": 24,
          }
        }
        style={
          Array [
            Object {
              "fontSize": 16,
              "lineHeight": 24,
            },
            Object {
              "color": "#475A6D",
              "fontFamily": "Titillium Web",
              "fontStyle": "normal",
              "fontWeight": "600",
            },
          ]
        }
        weight="SemiBold"
      >
        NATIONAL HEALTH SERVICE
      </Text>
    </View>
    <Text
      color="bluegrey"
      defaultColor="bluegrey"
      defaultWeight="Regular"
      font="TitilliumWeb"
      fontStyle={
        Object {
          "fontSize": 16,
          "lineHeight": 24,
        }
      }
      style={
        Array [
          Object {
            "fontSize": 16,
            "lineHeight": 24,
          },
          Object {
            "color": "#475A6D",
            "fontFamily": "Titillium Web",
            "fontStyle": "normal",
            "fontWeight": "400",
          },
        ]
      }
      weight="Regular"
    >
      WHO
    </Text>
    <View
      style={
        Object {
          "height": 4,
        }
      }
    />
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#CCD4DC",
          },
          false,
          Object {
            "height": 2,
          },
        ]
      }
    />
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#CCD4DC",
        },
        Object {
          "marginLeft": 24,
          "marginRight": 24,
        },
        Object {
          "height": 0.5,
        },
      ]
    }
  />
  <View
    style={
      Object {
        "height": 16,
      }
    }
  />
  <View
    style={
      Object {
        "paddingHorizontal": 24,
      }
    }
  >
    <View
      style={
        Object {
          "height": 4,
        }
      }
    />
    <Text
      color="bluegrey"
      defaultColor="bluegrey"
      defaultWeight="Regular"
      font="TitilliumWeb"
      fontStyle={
        Object {
          "fontSize": 16,
          "lineHeight": 24,
        }
      }
      style={
        Array [
          Object {
            "fontSize": 16,
            "lineHeight": 24,
          },
          Object {
            "color": "#475A6D",
            "fontFamily": "Titillium Web",
            "fontStyle": "normal",
            "fontWeight": "400",
          },
        ]
      }
      weight="Regular"
    >
      Rilasciato ai sensi dell'art.11, comma 16 del DL 31 mag 2010, n.78 e dell’art.1, comma 4 del DM 2 nov 2011
    </Text>
  </View>
</View>
`;

exports[`MedicalPrescriptionAttachments component when an attachment is present should render it 1`] = `
<View>
  <View
    style={
      Object {
        "paddingHorizontal": 24,
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": -4,
        }
      }
    >
      <Text
        color="bluegrey"
        defaultColor="bluegrey"
        defaultWeight="Regular"
        font="TitilliumWeb"
        fontStyle={
          Object {
            "fontSize": 16,
            "lineHeight": 24,
          }
        }
        style={
          Array [
            Object {
              "fontSize": 16,
              "lineHeight": 24,
            },
            Object {
              "color": "#475A6D",
              "fontFamily": "Titillium Web",
              "fontStyle": "normal",
              "fontWeight": "600",
            },
          ]
        }
        weight="SemiBold"
      >
        NATIONAL HEALTH SERVICE
      </Text>
    </View>
    <Text
      color="bluegrey"
      defaultColor="bluegrey"
      defaultWeight="Regular"
      font="TitilliumWeb"
      fontStyle={
        Object {
          "fontSize": 16,
          "lineHeight": 24,
        }
      }
      style={
        Array [
          Object {
            "fontSize": 16,
            "lineHeight": 24,
          },
          Object {
            "color": "#475A6D",
            "fontFamily": "Titillium Web",
            "fontStyle": "normal",
            "fontWeight": "400",
          },
        ]
      }
      weight="Regular"
    >
      WHO
    </Text>
    <View
      style={
        Object {
          "height": 4,
        }
      }
    />
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#CCD4DC",
          },
          false,
          Object {
            "height": 2,
          },
        ]
      }
    />
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#CCD4DC",
        },
        Object {
          "marginLeft": 24,
          "marginRight": 24,
        },
        Object {
          "height": 0.5,
        },
      ]
    }
  />
  <View
    style={
      Object {
        "height": 16,
      }
    }
  />
  <View
    style={
      Object {
        "paddingHorizontal": 24,
      }
    }
  >
    <View
      style={
        Object {
          "height": 4,
        }
      }
    />
    <Text
      color="bluegrey"
      defaultColor="bluegrey"
      defaultWeight="Regular"
      font="TitilliumWeb"
      fontStyle={
        Object {
          "fontSize": 16,
          "lineHeight": 24,
        }
      }
      style={
        Array [
          Object {
            "fontSize": 16,
            "lineHeight": 24,
          },
          Object {
            "color": "#475A6D",
            "fontFamily": "Titillium Web",
            "fontStyle": "normal",
            "fontWeight": "400",
          },
        ]
      }
      weight="Regular"
    >
      Rilasciato ai sensi dell'art.11, comma 16 del DL 31 mag 2010, n.78 e dell’art.1, comma 4 del DM 2 nov 2011
    </Text>
  </View>
</View>
`;

exports[`MedicalPrescriptionAttachments component when the organization name is defined should render it 1`] = `
<View>
  <View
    style={
      Object {
        "paddingHorizontal": 24,
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": -4,
        }
      }
    >
      <Text
        color="bluegrey"
        defaultColor="bluegrey"
        defaultWeight="Regular"
        font="TitilliumWeb"
        fontStyle={
          Object {
            "fontSize": 16,
            "lineHeight": 24,
          }
        }
        style={
          Array [
            Object {
              "fontSize": 16,
              "lineHeight": 24,
            },
            Object {
              "color": "#475A6D",
              "fontFamily": "Titillium Web",
              "fontStyle": "normal",
              "fontWeight": "600",
            },
          ]
        }
        weight="SemiBold"
      >
        NATIONAL HEALTH SERVICE
      </Text>
    </View>
    <Text
      color="bluegrey"
      defaultColor="bluegrey"
      defaultWeight="Regular"
      font="TitilliumWeb"
      fontStyle={
        Object {
          "fontSize": 16,
          "lineHeight": 24,
        }
      }
      style={
        Array [
          Object {
            "fontSize": 16,
            "lineHeight": 24,
          },
          Object {
            "color": "#475A6D",
            "fontFamily": "Titillium Web",
            "fontStyle": "normal",
            "fontWeight": "400",
          },
        ]
      }
      weight="Regular"
    >
      WHO
    </Text>
    <View
      style={
        Object {
          "height": 4,
        }
      }
    />
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#CCD4DC",
          },
          false,
          Object {
            "height": 2,
          },
        ]
      }
    />
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#CCD4DC",
        },
        Object {
          "marginLeft": 24,
          "marginRight": 24,
        },
        Object {
          "height": 0.5,
        },
      ]
    }
  />
  <View
    style={
      Object {
        "height": 16,
      }
    }
  />
  <View
    style={
      Object {
        "paddingHorizontal": 24,
      }
    }
  >
    <View
      style={
        Object {
          "height": 4,
        }
      }
    />
    <Text
      color="bluegrey"
      defaultColor="bluegrey"
      defaultWeight="Regular"
      font="TitilliumWeb"
      fontStyle={
        Object {
          "fontSize": 16,
          "lineHeight": 24,
        }
      }
      style={
        Array [
          Object {
            "fontSize": 16,
            "lineHeight": 24,
          },
          Object {
            "color": "#475A6D",
            "fontFamily": "Titillium Web",
            "fontStyle": "normal",
            "fontWeight": "400",
          },
        ]
      }
      weight="Regular"
    >
      Rilasciato ai sensi dell'art.11, comma 16 del DL 31 mag 2010, n.78 e dell’art.1, comma 4 del DM 2 nov 2011
    </Text>
  </View>
</View>
`;

exports[`MedicalPrescriptionAttachments component with default properties should render 1`] = `
<View>
  <View
    style={
      Object {
        "paddingHorizontal": 24,
      }
    }
  >
    <View
      style={
        Object {
          "marginBottom": -4,
        }
      }
    >
      <Text
        color="bluegrey"
        defaultColor="bluegrey"
        defaultWeight="Regular"
        font="TitilliumWeb"
        fontStyle={
          Object {
            "fontSize": 16,
            "lineHeight": 24,
          }
        }
        style={
          Array [
            Object {
              "fontSize": 16,
              "lineHeight": 24,
            },
            Object {
              "color": "#475A6D",
              "fontFamily": "Titillium Web",
              "fontStyle": "normal",
              "fontWeight": "600",
            },
          ]
        }
        weight="SemiBold"
      >
        NATIONAL HEALTH SERVICE
      </Text>
    </View>
    <View
      style={
        Object {
          "height": 4,
        }
      }
    />
    <View
      style={
        Array [
          Object {
            "backgroundColor": "#CCD4DC",
          },
          false,
          Object {
            "height": 2,
          },
        ]
      }
    />
  </View>
  <View
    style={
      Array [
        Object {
          "backgroundColor": "#CCD4DC",
        },
        Object {
          "marginLeft": 24,
          "marginRight": 24,
        },
        Object {
          "height": 0.5,
        },
      ]
    }
  />
  <View
    style={
      Object {
        "height": 16,
      }
    }
  />
  <View
    style={
      Object {
        "paddingHorizontal": 24,
      }
    }
  >
    <View
      style={
        Object {
          "height": 4,
        }
      }
    />
    <Text
      color="bluegrey"
      defaultColor="bluegrey"
      defaultWeight="Regular"
      font="TitilliumWeb"
      fontStyle={
        Object {
          "fontSize": 16,
          "lineHeight": 24,
        }
      }
      style={
        Array [
          Object {
            "fontSize": 16,
            "lineHeight": 24,
          },
          Object {
            "color": "#475A6D",
            "fontFamily": "Titillium Web",
            "fontStyle": "normal",
            "fontWeight": "400",
          },
        ]
      }
      weight="Regular"
    >
      Rilasciato ai sensi dell'art.11, comma 16 del DL 31 mag 2010, n.78 e dell’art.1, comma 4 del DM 2 nov 2011
    </Text>
  </View>
</View>
`;
